STX-304: fix after code review
