# Modules/Role/Routes/admin.php
@@ -12,6 +12,7 @@ Route::group(['middleware' => 'tenant.set'], function () {
     Route::apiResource('roles', RoleController::class);
 
     Route::get('permissions/all', [PermissionController::class, 'all']);
+    Route::get('permissions/count', [PermissionController::class, 'count']);
     Route::apiResource('permissions', PermissionController::class)->only('index', 'show');
 
     // Columns
